10027
And the failure is
```
b.scala:3: error: assignment to non variable
  var b: a.type = a
      ^
one error found
```
